--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geolocated": "^4.1.2",
     "react-helmet": "^6.1.0",
     "react-html-string": "^0.1.1",
     "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
